<?xml version="1.0"?>
<package format="2">
  <name>volumetric_mapping</name>
  <version>0.0.0</version>
  <description>Stack for volumetric mapping implementations to use with path planning.</description>
  <maintainer email="helen.oleynikova@mavt.ethz.ch">Helen Oleynikova</maintainer>

  <license>tbd</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>octomap_world</depend>
  <depend>volumetric_map_base</depend>
  <depend>volumetric_msgs</depend>
  <depend>minkindr</depend>

  <export>
    <metapackage/>
  </export>
</package>
