<?xml version="1.0"?>
<package format="2">
  <name>volumetric_msgs</name>
  <version>0.0.0</version>
  <description>Messages and services for volumetric mapping.</description>

  <author email="helen.oleynikova@mavt.ethz.ch">Helen Oleynikova</author>
  <author email="markus.achtelik_devel@mavt.ethz.ch">Markus Achtelik</author>

  <maintainer email="helen.oleynikova@mavt.ethz.ch">Helen Oleynikova</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
</package>
